--- a/package.json
+++ b/package.json
@@ -13,27 +13,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "graphql": "^15.6.1",
-    "graphql-request": "^3.5.0",
-    "html-react-parser": "^1.4.0",
-    "moment": "^2.29.1",
-    "next": "^11.1.4",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-multi-carousel": "^2.6.5",
-    "sass": "^1.42.1",
-    "swr": "^1.0.1"
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.1.0",
+    "html-react-parser": "^3.0.8",
+    "moment": "^2.29.4",
+    "next": "^13.1.6",
+    "react": "^18.2.0",
+    "react-dom": "18.2.0",
+    "react-multi-carousel": "^2.8.2",
+    "sass": "^1.58.0",
+    "swr": "^2.0.3"
   },
   "devDependencies": {
-    "autoprefixer": "^10.3.6",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-next": "11.1.2",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "postcss": "^8.3.8",
-    "tailwindcss": "^2.2.7"
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.33.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-next": "^13.1.6",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
